Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-115685

Fix grid in scatter graph

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.6.0 Beta3, 6.7.0 FF
    • 6.6, 6.7
    • Graphs: 3D
    • None
    • 6517f502d (dev), 755ea340d (6.6)

      Grid doesn't work in qml scattergraph example. This bug seems to be introduced by Support axis range changes (I7a237f11) ยท Gerrit Code Review (qt-project.org)

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            oulu_hillbilly Sami Varanka
            oulu_hillbilly Sami Varanka
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes