Correct scaling for scatter grid and background

Scale and position the grid and background
correctly in scattergraph.

Fixes: QTBUG-115685
Change-Id: I6aaae8020417fa85802691551653151c3d6e1fe8
Reviewed-by: Dilek Akcay <dilek.akcay@qt.io>
Reviewed-by: Kwanghyo Park <kwanghyo.park@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
(cherry picked from commit 6517f502db44b1e89dfab7be1f9c1be1b85a9e4c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>